--- a/src/components/TitleCard/titlecard.css
+++ b/src/components/TitleCard/titlecard.css
@@ -1,6 +1,7 @@
 .title-card{
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 30px;
+    
 }
 .title-card h2{
     margin-bottom: 8px;
@@ -8,9 +9,21 @@
 .card-list{
     display: flex;
     gap: 10px;
+    overflow-x: scroll;
 }
-/* .card img{
-    width: 240px !important;
+.card-list::-webkit-scrollbar{
+    display: none;
+}
+.card-list img{
+    width: 240px;
     border-radius: 4px;
     cursor: pointer;
-} */
+}
+.card-list .card{
+    position: relative;
+}
+.card-list .card p{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
