--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import "tailwindcss";
-/* *{
+*{
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-} */
+}
 body{
   background: black;
   color: white;
-}
+  font-family: Inter, system-ui, sans-serif;
+  }
