--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -112,3 +112,13 @@
     left: 15px;
   }
 }
+.loading-spinner{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loading-spinner img{
+  width: 60px;
+}
