--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,75 +1,106 @@
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 20px 6%;
-    position: fixed;
-    font-size: 14px;
-    color: #e5e5e5;
-    background-image: linear-gradient(180deg,rgba(0,0,0,0.7));
-    z-index: 1;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px 6%;
+  position: fixed;
+  font-size: 14px;
+  color: #e5e5e5;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.7));
+  z-index: 1;
 }
-.nav-left{
-    display: flex;
-    align-items: center;
-    gap: 50px;
+.nav-left {
+  display: flex;
+  align-items: center;
+  gap: 50px;
 }
-.nav-left img{
-    width: 90px;
-
-}
-
-.nav-left ul{
-    display: flex;
-    list-style: none;
-    gap: 20px;
-}
-.nav-left ul li{
-    cursor: pointer;
+.nav-left img {
+  width: 90px;
 }
 
-.nav-right{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+.nav-left ul {
+  display: flex;
+  list-style: none;
+  gap: 20px;
 }
-.nav-right img{
-    width: 20px;
-    cursor: pointer;
-}
-.nav-right .profile{
-    width: 35px;
-    border-radius: 4px;
+.nav-left ul li {
+  cursor: pointer;
 }
 
-.nav-profile{
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    gap: 10px;
-    position: relative;
+.nav-right {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
-.navbar .dropdown{
-    position: absolute;
-    top: 100%;
-    right: 0;
-    width: max-content;
-    background: #191919;
-    padding: 18px 22px;
-    border-radius: 4px;
-    text-decoration: underline;
-    z-index: 1;
+.nav-right img {
+  width: 20px;
+  cursor: pointer;
+}
+.nav-right .profile {
+  width: 35px;
+  border-radius: 4px;
+}
+
+.nav-profile {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 10px;
+  position: relative;
+}
+.navbar .dropdown {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: max-content;
+  background: #191919;
+  padding: 12px 18px;
+  border-radius: 4px;
+  text-decoration: none;
+  z-index: 100;
+  display: none;
+}
+.navbar .dropdown p {
+  font-size: 13px;
+  cursor: pointer;
+}
+.nav-profile:hover .dropdown {
+  display: block;
+}
+
+.nav-dark {
+  background-color: #191919;
+}
+.dropdown:active{
+    color: aliceblue;
+}
+
+@media (max-width: 800px) {
+  .navbar {
+    padding: 20px 4%;
+  }
+  .navbar ul {
     display: none;
+  }
+  .navbar img {
+    height: 25px;
+  }
+  .dropdown:hover {
+    width: 20px;
+    padding: ;
+    right: auto;
+    left: 0;
+  }
+}
 
-}
-.navbar .dropdown p{
-    font-size: 13px;
-    cursor: pointer;
-}
-.nav-profile:hover .dropdown{
-    display: block;
-}
-
-.nav-dark{
-    background-color: #191919;
+@media (max-width: 480px) {
+  .navbar img {
+    height: 20px;
+  }
+  .nav-right {
+    gap: 10px;
+  }
+  .nav-left {
+    width: 10px;
+  }
 }
