--- a/src/components/TitleCard/titlecard.css
+++ b/src/components/TitleCard/titlecard.css
@@ -29,3 +29,34 @@
     text-decoration: none;
     color: #fff;
 }
+
+@media (max-width:800px){
+    .title-card{
+        margin-top: 20px;
+        margin-bottom: 0;
+    }
+    .title-card h2{
+        font-size: 20px;
+    }
+    .card-list img{
+        width: 200px;
+    }
+    .card-list p{
+        font-size: 12px;
+    }
+
+}
+
+@media (max-width:480px){
+
+    .title-card h2{
+        font-size: 15px;
+    }
+    .card-list img{
+        width: 160px;
+    }
+    .card-list p{
+        font-size: 10px;
+    }
+
+}
