--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -78,6 +78,19 @@
   font-weight: 500;
   cursor: pointer;
 }
+
+.loading-spinner{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loading-spinner img{
+  width: 60px;
+}
+
+
 /* Tablets */
 @media (max-width: 768px) {
   .login-form {
@@ -89,36 +102,13 @@
     width: 120px;
   }
 }
-
 /* Mobile */
-@media (max-width: 480px) {
-  .login {
-    padding: 10px;
-    
+@media (max-width: 500px){
+  .login{
+    padding: 15px 5%;
   }
-
-  .login-form {
-    width: 100%;
-    padding: 20px 20px;
+  .login-form{
+    padding: 20px;
     margin-top: 30px;
   }
-
-  .login-form h2 {
-    font-size: 26px;
-  }
-
-  .form-logo {
-    width: 100px;
-    left: 15px;
-  }
-}
-.loading-spinner{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.loading-spinner img{
-  width: 60px;
 }
